Introduce note summary and ability to expand/collapse a note when in the edit form to and from the summary and the full form

--- a/frontend/app/assets/stylesheets/archivesspace/notes.less
+++ b/frontend/app/assets/stylesheets/archivesspace/notes.less
@@ -32,4 +32,41 @@
     &.render-singlequote:before, &.render-boldsinglequote:before {content: "'"}
     &.render-singlequote:after, &.render-boldsinglequote:after {content: "'"}
   }
+
+  .note-summary-view {
+    display: none;
+  }
+
+  .subrecord-form-fields {
+    .collapse-note-toggle {
+      margin: 6px 6px 0 0;
+
+      .expand {
+        display: none;
+      }
+    }
+    &.collapsed {
+      .subrecord-form-container {
+        display: none;
+      }
+      .collapse-note-toggle {
+        .collapse {
+          display: none;
+        }
+        .expand {
+          display: inline;
+        }
+      }
+      .note-summary-view {
+        display: block;
+        background-color: #f3f3f3;
+
+        .note-content-summary {
+          padding: 10px;
+          border-top: 1px dotted #CCC;
+          margin: 0 20px;
+        }
+      }
+    }
+  }
 }
