--- a/public/app/views/search/_pagination_summary.html.erb
+++ b/public/app/views/search/_pagination_summary.html.erb
@@ -1,38 +1,39 @@
-<% if search_data %>
+<% if @search_data %>
+<% configure_columns %> 
   <div class="pull-left">
     <%= I18n.t "pagination.summary_prefix" %> <strong><%= search_data["offset_first"] %></strong> <%= I18n.t "pagination.summary_offset_connector" %> <strong><%= search_data["offset_last"] %></strong> <%= I18n.t "pagination.summary_total_connector" %> <strong><%= search_data["total_hits"] %></strong> <%= I18n.t "pagination.summary_suffix" %>
   </div>
-  <div class="sort-by-action pull-right" style="position: relative">
-    <%= I18n.t("search_sorting.sort_by") %>
+
+  <div class="pull-right" style="position: relative">
     <span class="input-append">
+      <label style="float: left;"><%= I18n.t("search_sorting.sort_by") %>&#160;</label>
       <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-        <span class="inset-label"><%= search_data.sorted_by_label %></span>
+        <span class="inset-label"><%= @search_data.sorted_by_label(title_sort_label) %></span>
         <span class="btn btn-mini last"><span class="caret"></span></span>
       </a>
       <ul class="dropdown-menu pull-right">
-        <li><%= link_to I18n.t("search_sorting.relevance"), params_for_search("sort" => "") %></li>
-        <li class="dropdown-submenu pull-left">
-          <%= link_to I18n.t("search_sorting.title_sort"), params_for_search("sort" => search_data.sort_filter_for("title_sort")) %>
-          <ul class="dropdown-menu">
-            <li><%= link_to I18n.t("search_sorting.asc"), params_for_search("sort" => "title_sort asc") %></li>
-            <li><%= link_to I18n.t("search_sorting.desc"), params_for_search("sort" => "title_sort desc") %></li>
-          </ul>
-        </li>
-        <li class="dropdown-submenu pull-left">
-          <%= link_to I18n.t("search_sorting.create_time"), params_for_search("sort" => search_data.sort_filter_for("create_time", "desc")) %>
-          <ul class="dropdown-menu">
-            <li><%= link_to I18n.t("search_sorting.asc"), params_for_search("sort" => "create_time asc") %></li>
-            <li><%= link_to I18n.t("search_sorting.desc"), params_for_search("sort" => "create_time desc") %></li>
-          </ul>
-        </li>
-        <li class="dropdown-submenu pull-left">
-          <%= link_to I18n.t("search_sorting.user_mtime"), params_for_search("sort" => search_data.sort_filter_for("user_mtime", "desc")) %>
-          <ul class="dropdown-menu">
-            <li><%= link_to I18n.t("search_sorting.asc"), params_for_search("sort" => "user_mtime asc") %></li>
-            <li><%= link_to I18n.t("search_sorting.desc"), params_for_search("sort" => "user_mtime desc") %></li>
-          </ul>
-        </li>
+        <% if @search_data.weightable? %>
+          <li><%= link_to I18n.t("search_sorting.relevance"), build_search_params("sort" => "") %></li>
+        <% end %>
+        <% if show_title_column? %>
+          <li class="dropdown-submenu pull-left">
+            <%= link_to title_sort_label, build_search_params("sort" => @search_data.sort_filter_for("title_sort")) %>
+            <ul class="dropdown-menu">
+              <li><%= link_to I18n.t("search_sorting.asc"), build_search_params("sort" => "title_sort asc") %></li>
+              <li><%= link_to I18n.t("search_sorting.desc"), build_search_params("sort" => "title_sort desc") %></li>
+            </ul>
+          </li>
+        <% end %>
+        <% @search_data.sort_fields.each do |field| %>
+          <li class="dropdown-submenu pull-left">
+            <%= link_to I18n.t("search_sorting.#{field}"), build_search_params("sort" => @search_data.sort_filter_for(field, "desc")) %>
+            <ul class="dropdown-menu">
+              <li><%= link_to I18n.t("search_sorting.asc"), build_search_params("sort" => "#{field} asc") %></li>
+              <li><%= link_to I18n.t("search_sorting.desc"), build_search_params("sort" => "{field desc") %></li>
+            </ul>
+          </li>
+        <% end %>
       </ul>
     </span>
-  </div>
+ </div>
 <% end %>
