--- a/frontend/app/views/notes/_template.html.erb
+++ b/frontend/app/views/notes/_template.html.erb
@@ -1,20 +1,20 @@
 <div id="template_note_summary"><!--
   <div class="note-summary-view">
-    {if defined("label") && label != "" && label != type}
-      <div class="control-group">
-        <label class="control-label"><%= I18n.t("note_attributes.label") %></label>
-        <div class="controls label-only">${label}</div>
-      </div>
-    {/if}
-    {if defined("type") && type != ""}
-      <div class="control-group">
-        <label class="control-label"><%= I18n.t("note.note_type") %></label>
-        <div class="controls label-only">${type}</div>
-      </div>
-    {/if}
+    <div class="note-summary-title">
+      {if type != ""}
+        ${type}
+      {/if}
+      {if label != "" && label != type}
+        {if type != ""} - {/if}
+        ${label}
+      {/if}
+      {if label == "" && type == ""}
+        ${jsonmodel_type}
+      {/if}
+    </div>
     {if summary.length > 0}
-      <div class="note-content-summary">
-        <p>${summary}</p>
+      <div class="note-summary-content">
+        ${summary}
       </div>
     {/if}
   </div>
