--- a/frontend/app/views/shared/_header_user.html.erb
+++ b/frontend/app/views/shared/_header_user.html.erb
@@ -25,6 +25,8 @@
           <li><%= link_to I18n.t("navbar.manage_users"), :controller => :users, :action => :create %></li>
           <li><%= link_to I18n.t("navbar.manage_enumerations"), :controller => :enumerations, :action => :index %></li>
         <% end %>
+        <li class="divider"></li>
+          <li><%= link_to I18n.t("navbar.manage_preferences"), :controller => :preferences, :action => :edit, :id => 0 %></li>
         <% if ArchivesSpaceHelp.enabled? %>
           <li class="divider"></li>
         <% end %>
