I18n the collapse/expand notes link

--- a/frontend/app/views/notes/_template.html.erb
+++ b/frontend/app/views/notes/_template.html.erb
@@ -22,8 +22,8 @@
 
 <div id="template_note_collapse_action"><!--
   <button class="btn btn-mini pull-right collapse-note-toggle">
-    <span class="expand">Expand</span>
-    <span class="collapse">Collapse</span>
+    <span class="expand"><%= I18n.t("note._frontend.action.expand")%></span>
+    <span class="collapse"><%= I18n.t("note._frontend.action.collapse")%></span>
   </button>
 --></div>
 
