Only show Sign In button when the navbar is collapsed

--- a/frontend/app/assets/stylesheets/archivesspace/header.less
+++ b/frontend/app/assets/stylesheets/archivesspace/header.less
@@ -220,7 +220,18 @@ header .inset-label {
   }
 }
 
+.navbar {
+  .btn-collapse-login {
+    display: none;
+  }
+}
+
 @media (max-width: 979px) {
+  .navbar {
+    .btn-collapse-login {
+      display: block;
+    }
+  }
   .login-dropdown {
     .session-actions.dropdown-toggle {
       display: none;
