--- a/frontend/app/views/instances/_template.html.erb
+++ b/frontend/app/views/instances/_template.html.erb
@@ -1,5 +1,15 @@
 <%= render :partial => "container/template" %>
 
+<div id="template_instance_summary"><!--
+  <div class="subrecord-summary-title">
+    {if instance_type != ""}${instance_type}{else}____{/if}:
+    {if type_1 != ""}${type_1}{else}____{/if}
+    {if indicator_1 != ""}${indicator_1}{else}____{/if}{if type_2 != "" || indicator_2 != ""},
+    {if type_2 != ""}${type_2}{else}____{/if}
+    {if indicator_2 != ""}${indicator_2}{else}____{/if}{/if}
+  </div>
+--></div>
+
 <% define_template "instance_container", jsonmodel_definition(:instance) do |form| %>
   <div class="subrecord-form-fields">
     <div class="subrecord-form-container">
