locales tweaks and partial support for global vs repo prefs

--- a/frontend/app/views/shared/_header_user.html.erb
+++ b/frontend/app/views/shared/_header_user.html.erb
@@ -26,7 +26,10 @@
           <li><%= link_to I18n.t("navbar.manage_enumerations"), :controller => :enumerations, :action => :index %></li>
         <% end %>
         <li class="divider"></li>
-          <li><%= link_to I18n.t("navbar.manage_preferences"), :controller => :preferences, :action => :edit, :id => 0 %></li>
+          <li><%= link_to I18n.t("navbar.global_preferences"), :controller => :preferences, :action => :edit, :id => 0, :global => true %></li>
+        <% if session[:repo_id] %>
+          <li><%= link_to I18n.t("navbar.repo_preferences"), :controller => :preferences, :action => :edit, :id => 0 %></li>
+        <% end %>
         <% if ArchivesSpaceHelp.enabled? %>
           <li class="divider"></li>
         <% end %>
